--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,10 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     def room_version = "2.6.1"
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation libs.room.runtime
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation libs.gson
     implementation libs.material.v1110
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
 }
